# openpose-extern-wrapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/openpose_wrapper/: wrapper.h
src/: CMakeLists.txt
src/openpose_wrapper/: CMakeLists.txt  wrapper.cpp
